jdl-entities plugins plus many small changes